syntax = "proto3";
package grpc_notification;

option go_package = "/grpc_notification";

message Notification {
    int32 id = 1;
    int32 fromId = 2 [json_name="from_id"];
    string notificationType = 3 [json_name="notification_type"];
    string fromFullName = 4 [json_name="from_fullname"];
    string content = 5;
    string when = 6;
    string status = 7;
}

message ListNotification {
    repeated Notification notifications = 1;
}
message NotificationRequest {
    int32 id = 1;
    int32 userLoggedId = 2 [json_name="user_logged_id"];;
    int32 fromId = 3 [json_name="from_id"];;
    int32 limit = 4;
}

service NotificationService {
    rpc Get(NotificationRequest) returns (Notification) {}
    rpc List(NotificationRequest) returns (ListNotification) {}
}