syntax = "proto3";
package grpc_user;

option go_package = "/grpc_user";

message User {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string role = 5;
}

message CreateUserRequest {
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string role = 5;
    string password = 6;
    string rePassword = 7;
}

message CheckUserRequest {
    string email = 1;
    string password = 2;
}

service UserService {
    rpc CheckUser(CheckUserRequest) returns (User) {}
    rpc CreateUser(CreateUserRequest) returns (User) {}
    rpc Get(User) returns (User) {}
}